tests/reference/asr-matrix_matmul_01-6b086c6.stderr
semantic error: The argument `matrix_a` in `matmul` must be of type Integer, Real, Complex or Logical
 --> tests/errors/matrix_matmul_01.f90:5:21
  |
5 |     print *, matmul(a, b)
  |                     ^ 
